# material-color-utilities-rust

./: .gitignore  Cargo.toml  README.md  biome.json  package.json
crates/material-color-utilities/: Cargo.toml  LICENSE
crates/material-color-utilities-wasm/: Cargo.toml
crates/material-color-utilities-wasm/src/: lib.rs
crates/material-color-utilities-wasm/src/types/: mod.rs  tonal_palette.rs
crates/material-color-utilities/examples/: all.rs
crates/material-color-utilities/examples/custom/: app.rs  export_figma.rs  main.rs
crates/material-color-utilities/src/: blend.rs  contrast.rs  dislike_analyzer.rs  lib.rs  score.rs  temperature_cache.rs
crates/material-color-utilities/src/dynamiccolor/: color_calculation_spec.rs  color_calculation_spec_2021.rs  color_spec.rs  color_spec_2021.rs  color_spec_2025.rs  dynamic_color.rs  dynamic_scheme.rs  material_dynamic_colors.rs  palettes_spec.rs  palettes_spec_2021.rs  palettes_spec_2025.rs  platform.rs  spec_version.rs  tone_delta_pair.rs  variant.rs
crates/material-color-utilities/src/hct/: cam16.rs  mod.rs  viewing_conditions.rs
crates/material-color-utilities/src/palettes/: tonal_palette.rs
crates/material-color-utilities/src/quantize/: mod.rs  point_provider.rs  quantizer.rs  quantizer_celebi.rs  quantizer_map.rs  quantizer_result.rs  quantizer_wsmeans.rs  quantizer_wu.rs
crates/material-color-utilities/src/utils/: color.rs  math.rs  mod.rs  string.rs
crates/mtb/: Cargo.toml
crates/mtb/src/: figma_legacy.rs  main.rs  main_old.rs  utils.rs
crates/mtb/src/cli/: mod.rs
crates/mtb/src/formats/: figma_material_theme_builder.rs  mod.rs
crates/mtb/src/prompt/: mod.rs
src/: blend.rs  contrast.rs  dislike_analyzer.rs  lib.rs  temperature_cache.rs  test.rs
src/contrast/: mod.rs
src/dynamiccolor/: color_calculation_spec_2021.rs  color_calculation_spec_2025.rs  color_spec.rs  color_spec_2021.rs  contrast_curve.rs  dynamic_scheme.rs  material_dynamic_colors.rs  mod.rs  platform.rs  spec_version.rs  tone_delta_pair.rs  variant.rs
src/hct/: cam16.rs  hct.rs  hct_solver.rs  mod.rs  viewing_conditions.rs
src/palettes/: mod.rs  tonal_palette.rs
src/score/: mod.rs
src/temperature/: mod.rs  temperature_cache.rs
src/utils/: color.rs  math.rs
