[package]
name = "material-color-utilities"
description = "Color libraries for Material You"
version = "1.0.0-dev.4"
edition = "2024"
license = "Apache-2.0"
keywords = ["material", "color"]
readme = "README.md"
repository = "https://github.com/deminearchiver/material-color-utilities-rust/"

[dependencies]
num-traits = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
