[package]
name = "material-color-utilities"
description = "Color libraries for Material You"
version = "1.0.0-dev.13"
edition.workspace = true
license = "Apache-2.0"
keywords = ["material", "color"]
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/material-color-utilities"

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
indicatif = { version = "0.17", features = ["improved_unicode"] }

[dependencies]
num-traits = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
by_address = "1"
csscolorparser = "0.7"
rand = { version = "0.9", features = [], optional = true }

[features]
quantize = ["dep:rand"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
