[package]
name = "material-color-utilities"
description = "Color libraries for Material You"
version = "1.0.0-dev.17"
edition.workspace = true
license = "Apache-2.0"
keywords = ["material", "color"]
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/material-color-utilities"

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
indicatif = { version = "0.18", features = ["improved_unicode"] }
convert_case = { version = "0.8" }
indoc = "2"

[dependencies]
num-traits = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
by_address = "1"
csscolorparser = "0.7"
rand = { version = "0.9", features = [], optional = true }
ordered-float = { version = "5.0", default-features = false }

[features]
default = []
quantize = ["dep:rand"]
serde = ["dep:serde", "ordered-float/serde"]

[package.metadata.docs.rs]
all-features = true
